--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,12 +7,14 @@
 		"start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^3.0.0",
 		"@types/cors": "^2.8.7",
 		"@types/express": "^4.17.7",
 		"ts-node-dev": "^1.0.0-pre.56",
 		"typescript": "^3.9.7"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"reflect-metadata": "^0.1.13",
