--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
@@ -30,6 +31,7 @@
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-modal-dropdown": "^1.0.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
