--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,13 +10,16 @@
 		"@types/bcrypt": "^3.0.0",
 		"@types/cors": "^2.8.7",
 		"@types/express": "^4.17.7",
+		"@types/nodemailer": "^6.4.1",
 		"ts-node-dev": "^1.0.0-pre.56",
 		"typescript": "^3.9.7"
 	},
 	"dependencies": {
 		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
+		"nodemailer": "^6.5.0",
 		"reflect-metadata": "^0.1.13",
 		"sqlite3": "^5.0.0",
 		"typeorm": "^0.2.25",
